tests/sksl/errors/BreakOutsideLoop.glsl
### Compilation failed:

error: 3: break statement must be inside a loop or switch
1 error
